add feature insert/update

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,8 @@
     <title>Document</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/shop-homepage.css" rel="stylesheet">
+
 </head>
 
 <body>
