--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,40 @@
-<h1>Example App: Homeeeeeeeeeeeeeee</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+            <h1 class="my-4">Shop Watch</h1>
+            <div class="list-group">
+                <a href="#" class="list-group-item">Nam</a>
+                <a href="#" class="list-group-item">Nữ</a>
+                <a href="#" class="list-group-item">Giá tăng dần</a>
+                <a href="#" class="list-group-item">Giá giảm dần</a>
+            </div>
+        </div>
+
+        <div class="col-lg-9">
+            <div class="row">
+                {{#each watches}}
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="{{this.img}}" alt=""></a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="#">{{this.name}}</a>
+                            </h4>
+                            <div class="d-flex justify-content-between">
+                                <h5 class="text-left">{{this.price}}</h5>
+                                <h5 class="text-right">{{this.type}}</h5>
+
+                            </div>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam
+                                aspernatur!
+                            </p>
+                            <a type="submit" class="btn btn-primary mt-3">Thêm vào giỏ hàng</a>
+
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+    </div>
+</div>
