add feature delete

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -21,7 +21,11 @@
             <td class="d-flex" style="height: 65px;">
 
                 <a class="btn btn-link" href="/edit/{{this._id}}">Sửa</a>
-                <a class="btn btn-link">Xóa</a>
+                <form method="post" action="/{{this._id}}?_method=DELETE" id="formDelete">
+                    <button type="submit" class="btn btn-link" data-toggle="modal"
+                        data-target="#exampleModal">Xóa</button>
+
+                </form>
             </td>
         </tr>
         {{/each }}
@@ -31,3 +35,30 @@
 
 </table>
 <a class="btn btn-info btn-lg" style="font-weight: bold;" href="/add">Thêm sản phẩm mới</a>
+
+
+{{!-- Modal confirm delete --}}
+{{!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Xóa sản phẩm ?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                bạn có chắc muốn xóa sản phẩm này ???
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+
+                <button type="button" class="btn btn-primary" onclick="document.getElementById('formDelete').submit()">
+                    Cập nhật
+                </button>
+
+            </div>
+        </div>
+    </div>
+</div> --}}
