--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,9 @@
     <title>Document</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/shop-homepage.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    {{!--
+    <link href="/css/shop-homepage.css" rel="stylesheet"> --}}
 
 </head>
 
@@ -26,8 +28,8 @@
         {{> footer}}
     </div>
 
-    <script src="/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
