--- a/views/dangnhap.handlebars
+++ b/views/dangnhap.handlebars
@@ -5,7 +5,7 @@
 
 
         <form action="/users/handledangnhap" method="post">
-            <input placeholder="Username or Email" name="name" type="text" required="">
+            <input placeholder="Username" name="name" type="text" required="">
             <input placeholder="Password" name="password" type="password" required="">
             <input type="submit" value="ĐĂNG NHẬP" name="login">
         </form>
