--- a/views/editWatch.handlebars
+++ b/views/editWatch.handlebars
@@ -1,22 +1,21 @@
 <form class="mt-3" method="post" action="/watch/{{this._id}}?_method=PUT">
-    <h2>Cập nhật sản phẩm </h2>
+    <h2 class="font-weight-bold display-4">Cập nhật sản phẩm </h2>
     <div class="form-group mt-3">
         <label for="exampleInputEmail1">Tên sản phẩm</label>
-        <input type="text" class="form-control" value="{{this.name}}" id="exampleInputEmail1" name="name"
+        <input type="" class="form-control" value="{{this.name}}" id="exampleInputEmail1" name="name"
             placeholder="Tên sản phẩm">
     </div>
     <div class="form-group mt-3">
         <label for="exampleInputEmail1">Giá </label>
-        <input type="text" class="form-control" value={{price}} id="exampleInputEmail1" name="price" placeholder="Giá">
+        <input type="" class="form-control" value={{price}} id="exampleInputEmail1" name="price" placeholder="Giá">
     </div>
     <div class="form-group mt-3">
         <label for="exampleInputEmail1">Loại</label>
-        <input type="text" class="form-control" value={{type}} id="exampleInputEmail1" name="type" placeholder="Loại">
+        <input type="" class="form-control" value={{type}} id="exampleInputEmail1" name="type" placeholder="Loại">
     </div>
     <div class="form-group mt-3">
         <label for="exampleInputEmail1">Hình ảnh</label>
-        <input type="text" class="form-control" value={{img}} id="exampleInputEmail1" name="img"
-            placeholder="Hình ảnh">
+        <input type="" class="form-control" value={{img}} id="exampleInputEmail1" name="img" placeholder="Hình ảnh">
     </div>
     <button type="submit" class="btn btn-primary mt-3">Cập nhật</button>
 </form>
