--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,7 +11,9 @@
         </div>
 
         <div class="col-lg-9">
-            <div class="row">
+            <a href="/sort?type={{type}}&price=up" class="label" style="font-size: 20px;">Giá tăng dần {{type}}</a>
+            <a href="/sort?type={{type}}&price=down" class="label" style="font-size: 20px;">Giá giảm dần {{type}}</a>
+            <div class="row mt-2">
                 {{#each watches}}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
@@ -20,7 +22,7 @@
                             <h4 class="card-title">
                                 <a href="#">{{this.name}}</a>
                             </h4>
-                            <div class="d-flex justify-content-between">
+                            <div class="d-flex justify-content-between text-dark mb-2">
                                 <h5 class="text-left">{{format this.price}}</h5>
                                 <h5 class="text-right">{{this.type}}</h5>
 
